--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -22,7 +22,7 @@
         "from ipywidgets import Output\n",
         "pytz.timezone('Turkey')\n",
         "    \n",
-        "# Platform\n",
+        "# Platform in wich the app will run on, basic variables for envs\n",
         "\n",
         "td_id = \"TD1\"\n",
         "td_email = \"default@mail.com\"\n",
@@ -705,7 +705,10 @@
         "                    # specific, leave this string alone from now on\n",
         "                    tc_line.append(_mark_immutable(new_word))\n",
         "                    continue\n",
-        "\n",
+        "            if anydigit_pt.search(\"word\"):\n",
+        "                tc_line.append(_mark_immutable(new_word))\n",
+        "                continue\n",
+        "            \n",
         "            if all_caps:\n",
         "                if UC_INITIALS.match(word):\n",
         "                    tc_line.append(word)\n",
@@ -748,7 +751,7 @@
         "\n",
         "            if '-' in word:\n",
         "                hyphenated = map(\n",
-        "                    lambda t: title(t, callback, False),\n",
+        "                    lambda stringpart: title(stringpart, callback, False),\n",
         "                    word.split('-')\n",
         "                )\n",
         "                tc_line.append(\"-\".join(hyphenated))\n",
@@ -757,13 +760,12 @@
         "            if all_caps:\n",
         "                word = word.lower()\n",
         "\n",
-        "            # A term with all consonants should be considered an acronym.  But if it's\n",
-        "            # too short (like \"St\", don't apply this)\n",
+        "            # A term with all consonants should be considered an acronym.   \n",
         "            CONSONANTS = ''.join(set(string.ascii_lowercase)\n",
         "                                 - {'a', 'e', 'i', 'o', 'u', 'y'})\n",
         "            is_all_consonants = re.search('\\A[' + CONSONANTS + ']+\\Z', word,\n",
         "                                             flags= re.IGNORECASE)\n",
-        "            if is_all_consonants and len(word) > 2:\n",
+        "            if is_all_consonants:\n",
         "                tc_line.append(word.upper())\n",
         "                continue\n",
         "\n",
@@ -786,7 +788,7 @@
         "            m.group(2).capitalize()\n",
         "        ), result)\n",
         "        processed.append(result)\n",
-        "    result = \"\\n\".join(processed)\n",
+        "    result = \"\\n\".join(processed).strip()\n",
         "    return result\n",
         "\n",
         "##\n",
@@ -1110,12 +1112,13 @@
         "#eps2num_pt = re.compile(r\"(?<=\\d{1}[Xx])\\d{1,2}\\b\")\n",
         "#skip_re = re.compile(r\"(.txt)|(.i?nfo?)|(www.yts)|(RARBG_DO_NOT|rarbg_do_not)\")\n",
         "\n",
+        "anydigit_pt = re.compile(r\"\\d\")\n",
         "featurettes_pt = re.compile(r\"[F,f]eature[a-z]*|[E,e]xtras?\")\n",
         "mf_pt = re.compile(r\"((?<=\\b[S,s])|(?<=[S,s]eason)|(?<=[S,s]eason[\\s,\\.]))([1-9][0-9]?|0?[1-9])\")\n",
         "eps_pt = re.compile(r\"\\b([Ss]\\d{1,2}[Ee]\\d{1,2}|\\d{1,2}[xX]\\d{1,2}|[Ss]n?\\d{1,2}\\s?[Ee](ps?)?\\d{1,2})(?=[\\s\\.])\")\n",
         "check_sn_pt = re.compile(r\"[\\s,\\.]([S,s]\\d{1,2}|[Ss][Ee][Aa][Ss][Oo][Nn]([\\s,\\.]?)\\d{1,2})(?=[\\s,\\.]|e\\d{1,2}-\\d{1,2})(?!\\sto)\")\n",
         "yearsuff_pt = re.compile(r\"\\d{4}$\")\n",
-        "langs_pt = re.compile(r\"(?<=\\_|-|\\.|\\s)(Arabic|ar|English|en|French|fr|german|de|Finnish|fi|dutch|nl|Danish|da|greek|el|hindi|hi|Indonesian|id|italian|it|Japanese|ja|Korean|ko|Norwegian|no|Persian|fa|Polish|pl|Portuguese|pt|Russian|ru|Swedish|sv|Thai|th|Ukrainian|uk|Urdu|ur|Vietnamese|vi|spanish|es|Romanian|ro|Hungarian|hu)\", flags= re.IGNORECASE)\n",
+        "langs_pt = re.compile(r\"(?<=\\_|-|\\.|\\s)([Aa]rabic|ar|[Ee]nglish|en|[Ff]rench|fr|[Gg]erman|de|[Ff]innish|fi|[Dd]utch|nl|[Dd]anish|da|[Gg]reek|el|[Hh]indi|hi|[Ii]ndonesian|id|[Ii]talian|it|[Jj]apanese|ja|Korean|ko|Norwegian|no|Persian|fa|Polish|pl|Portuguese|pt|Russian|ru|Swedish|sv|Thai|th|Ukrainian|uk|Urdu|ur|Vietnamese|vi|spanish|es|Romanian|ro|Hungarian|hu)\", flags= re.IGNORECASE)\n",
         "digitssuff_pt = re.compile(r\"\\s\\d{1,2}$\")\n",
         "season_pt0 = re.compile(r\"([S,s]|([S,s]easons?\\s?))\\d{1,2}\")\n",
         "season_pt1 = re.compile(r\"\\b([S,s]|[S,s]eason([\\s,\\.]?))\\d{1,2}\")\n",
@@ -1695,7 +1698,7 @@
         "        name = name.split(quality)[0]\n",
         "    elif \"720p\" in name:\n",
         "        name = name.split(\"720p\")[0]    \n",
-        "    table = name.maketrans(\".\",\" \",\"'()\")\n",
+        "    table = name.maketrans({\".\": \" \",\"(\": None, \")\": None, \"'\": None})\n",
         "    trans = name.translate(table)\n",
         "    search = year_pt.search(trans)\n",
         "    if search: \n",
@@ -1709,17 +1712,12 @@
         "            res = trans.strip()\n",
         "    return title(res)\n",
         "\n",
-        "def name_episode(name, quality = \"1080\", keepDot = False):\n",
+        "def name_episode(name, quality = \"1080\"):\n",
         "    if quality in name:\n",
         "        name = name.split(quality)[0]\n",
         "    elif \"720p\" in name:\n",
         "        name = name.split(\"720p\")[0]\n",
-        "    if keepDot: \n",
-        "        r = s = \"\"\n",
-        "    else:\n",
-        "        r =\".\"\n",
-        "        s = \" \"\n",
-        "    table = name.maketrans(r, s, \"()\")\n",
+        "    table = name.maketrans({\".\": \" \",\"(\": None, \")\": None})\n",
         "    name = name.translate(table)\n",
         "    if name[-1] == \".\":\n",
         "        name = name[:-1]\n",
@@ -1795,7 +1793,7 @@
         "        targetshow = showsearch['foundname']\n",
         "        seasonpath = path_season(targetshow, season)\n",
         "        if os.path.exists(seasonpath) and not is_empty(seasonpath):\n",
-        "            check = eps_pt.search(searchepisode)\n",
+        "            check = eps_pt.search(searchepisode) #rerite search algorithm\n",
         "            eps = check.group() if check else searchepisode\n",
         "            epses = next(os.walk(seasonpath))[2]\n",
         "            for targetepisode in epses:\n",
@@ -2373,7 +2371,7 @@
         "        diritems.append(item)\n",
         "    return\n",
         "\n",
-        "def clean_season(path, keepDot = False):\n",
+        "def clean_season(path):\n",
         "    clean = []\n",
         "    info(f'Cleaning show season in path: {path}')\n",
         "    if not os.path.exists(path):\n",
@@ -2385,7 +2383,7 @@
         "        ext = splitted[1]\n",
         "        p1 = f\"{path}/{file}\"\n",
         "        if ext == \".mkv\" or ext == \".mp4\" or ext == \".srt\":\n",
-        "            newname = name_episode(eps, keepDot= keepDot) + ext\n",
+        "            newname = name_episode(eps) + ext\n",
         "            if newname != file:\n",
         "                p2 = f\"{path}/{newname}\"\n",
         "                cmd = f'mv \"{p1}\" \"{p2}\"'\n",
