--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -651,6 +651,7 @@
         "SMALL = r'a|an|and|as|at|but|by|en|for|if|in|of|on|or|the|to|v\\.?|via|vs\\.?'\n",
         "PUNCT = r\"\"\"!\"“#$%&'‘()*+,\\-–‒—―./:;?@[\\\\\\]_`{|}~\"\"\"\n",
         "\n",
+        "anydigit_pt = re.compile(r\"\\d\")\n",
         "SMALL_WORDS = re.compile(r'^(%s)$' % SMALL, re.I)\n",
         "SMALL_FIRST = re.compile(r'^([%s]*)(%s)\\b' % (PUNCT, SMALL), re.I)\n",
         "SMALL_LAST = re.compile(r'\\b(%s)[%s]?$' % (SMALL, PUNCT), re.I)\n",
@@ -708,7 +709,7 @@
         "            if anydigit_pt.search(\"word\"):\n",
         "                tc_line.append(_mark_immutable(new_word))\n",
         "                continue\n",
-        "            \n",
+        "\n",
         "            if all_caps:\n",
         "                if UC_INITIALS.match(word):\n",
         "                    tc_line.append(word)\n",
@@ -1112,7 +1113,6 @@
         "#eps2num_pt = re.compile(r\"(?<=\\d{1}[Xx])\\d{1,2}\\b\")\n",
         "#skip_re = re.compile(r\"(.txt)|(.i?nfo?)|(www.yts)|(RARBG_DO_NOT|rarbg_do_not)\")\n",
         "\n",
-        "anydigit_pt = re.compile(r\"\\d\")\n",
         "featurettes_pt = re.compile(r\"[F,f]eature[a-z]*|[E,e]xtras?\")\n",
         "mf_pt = re.compile(r\"((?<=\\b[S,s])|(?<=[S,s]eason)|(?<=[S,s]eason[\\s,\\.]))([1-9][0-9]?|0?[1-9])\")\n",
         "eps_pt = re.compile(r\"\\b([Ss]\\d{1,2}[Ee]\\d{1,2}|\\d{1,2}[xX]\\d{1,2}|[Ss]n?\\d{1,2}\\s?[Ee](ps?)?\\d{1,2})(?=[\\s\\.])\")\n",
@@ -1398,7 +1398,6 @@
         "    request = None\n",
         "    status = None\n",
         "    error = None\n",
-        "    attrs: DownloadAttrs = None    \n",
         "    search = \"\"\n",
         "    category = None\n",
         "    resultcount = 0\n",
@@ -1561,7 +1560,7 @@
         "    def actionhandler(self, e):\n",
         "        if e.column == ' ':\n",
         "            res: DownloadResult = self.results[e.row]\n",
-        "            download1337x(res, self.attrs)\n",
+        "            download1337x(res, self.attrs.copy())\n",
         "\n",
         "    def getdataframe(self):\n",
         "        resulttablesource = {\"Name\":[],  \"Date\": [], \"Size\": [],\"Seeders\": [], \"Leechers\": [], \"Uploader\": [], \" \": []}\n",
@@ -2056,7 +2055,7 @@
         "    result.errormessage = message\n",
         "    return result\n",
         "\n",
-        "def add_download(attrs: DownloadAttrs):\n",
+        "def add_download(attrs: DownloadAttrs): \n",
         "    if not (attrs.add_source == LOCALFILE_ADDSOURCE or attrs.add_source == MAGNET_ADDSOURCE):\n",
         "        raise(\"add_source should be LOCALFILE_ADDSOURCE or MAGNET_ADDSOURCE\")\n",
         "    result = AddResult() \n",
@@ -5583,6 +5582,8 @@
         "if not dev:\n",
         "    #if IS_ENV_COLAB:  output.clear() \n",
         "    display(container, Javascript(js))\n",
+        "\n",
+        "#BUG attrs obj is reused in every add. reproduction: add mulitple download from the same search.\n",
         "\n",
         "# using Javascript is persisted in the output\n",
         "# when cell done executing with setup thread running in the background, output is cleared.\n",
