updating hydraulic 2.8 & interactive notebook

--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -706,9 +706,6 @@
         "                    # specific, leave this string alone from now on\n",
         "                    tc_line.append(_mark_immutable(new_word))\n",
         "                    continue\n",
-        "            if anydigit_pt.search(\"word\"):\n",
-        "                tc_line.append(_mark_immutable(new_word))\n",
-        "                continue\n",
         "\n",
         "            if all_caps:\n",
         "                if UC_INITIALS.match(word):\n",
@@ -743,18 +740,12 @@
         "                continue\n",
         "\n",
         "            if \"/\" in word and \"//\" not in word:\n",
-        "                slashed = map(\n",
-        "                    lambda t: title(t,callback,False),\n",
-        "                    word.split('/')\n",
-        "                )\n",
+        "                slashed = map(lambda t: title(t,callback,False), word.split('/'))\n",
         "                tc_line.append(\"/\".join(slashed))\n",
         "                continue\n",
         "\n",
         "            if '-' in word:\n",
-        "                hyphenated = map(\n",
-        "                    lambda stringpart: title(stringpart, callback, False),\n",
-        "                    word.split('-')\n",
-        "                )\n",
+        "                hyphenated = map(lambda stringpart: title(stringpart, callback, False), word.split('-'))\n",
         "                tc_line.append(\"-\".join(hyphenated))\n",
         "                continue\n",
         "\n",
@@ -766,7 +757,7 @@
         "                                 - {'a', 'e', 'i', 'o', 'u', 'y'})\n",
         "            is_all_consonants = re.search('\\A[' + CONSONANTS + ']+\\Z', word,\n",
         "                                             flags= re.IGNORECASE)\n",
-        "            if is_all_consonants:\n",
+        "            if is_all_consonants or anydigit_pt.search(word):\n",
         "                tc_line.append(word.upper())\n",
         "                continue\n",
         "\n",
@@ -1732,16 +1723,23 @@
         "    except:\n",
         "        return False\n",
         "    name_s = transtitle(name)\n",
+        "    result = {'type': 'movie', \"foundname\": \"\", \"foundpath\": \"\", \"foundshow\": \"\", 'foundfile': \"\", \"founddir\": \"\"}\n",
         "    for i in range(len(movies_raw)):\n",
-        "        targetpath = path_movie(movies_raw[i])\n",
         "        targetname = movies_raw[i]\n",
+        "        targetpath = path_movie(movies_raw[i])\n",
         "        if name_s == transtitle(movies_raw[i]):\n",
         "            foundfile =  get_movie_file_path(targetpath, targetname)\n",
         "            if foundfile:\n",
         "                info(f\"Found {name} as {targetname}\")\n",
-        "                return {'type': 'movie', \"foundname\": targetname, \"foundpath\": targetpath, \"foundshow\": '', 'foundfile': foundfile, \"founddir\": config.movies_path}\n",
-        "    info(f\"{name} is not found\")\n",
-        "    return False\n",
+        "                result[\"foundname\"] = targetname\n",
+        "                result[\"foundpath\"] = targetpath\n",
+        "                result[\"foundshow\"] = \"\"\n",
+        "                result[\"foundfile\"] = foundfile\n",
+        "                result[\"founddir\"] = config.movies_path\n",
+        "                break\n",
+        "    if not result[\"foundpath\"]:\n",
+        "        info(f\"{name} is not found\")\n",
+        "    return result\n",
         "\n",
         "def show_exists(searchshow: str):\n",
         "    if not searchshow.strip():\n",
@@ -1753,44 +1751,59 @@
         "    except:\n",
         "        return False\n",
         "    name_trans = transtitle(searchshow, True)\n",
+        "    result = {'type': 'TV show', \"foundname\": \"\", \"foundpath\": \"\", \"foundshow\": \"\", 'foundfile': \"\", \"founddir\": \"\"}\n",
         "    for i in range(len(shows_raw)):\n",
         "        targetpath = path_tvshow(shows_raw[i])\n",
         "        targetname = shows_raw[i]\n",
         "        trans1 = transtitle(shows_raw[i], True)\n",
         "        if startswith(trans1, name_trans) and not is_empty(targetpath):\n",
         "            info(f\"{searchshow} is downloaded as {targetname}\")\n",
-        "            return {'type': 'TV show', \"foundname\": targetname, \"foundpath\": targetpath, \"foundshow\": targetname, 'foundfile': '', \"founddir\": config.tv_path}\n",
-        "    info(f\"{searchshow} is not found.\")\n",
-        "    return False\n",
+        "            result[\"foundname\"] = targetname\n",
+        "            result[\"foundpath\"] = targetpath\n",
+        "            result[\"foundshow\"] = targetname\n",
+        "            result[\"foundfile\"] = ''\n",
+        "            result[\"founddir\"] = config.tv_path\n",
+        "            break\n",
+        "    if not result[\"foundpath\"]:\n",
+        "        info(f\"{searchshow} is not found.\")\n",
+        "    return result\n",
         "\n",
-        "def season_exists(targetshow, targetseason):\n",
-        "    if not targetseason.strip():\n",
+        "def season_exists(foundshow, searchseason):\n",
+        "    if not searchseason.strip():\n",
         "        error('Season name is empty')\n",
         "        return\n",
-        "    if not targetshow.strip():\n",
+        "    if not foundshow.strip():\n",
         "        error('Show name is empty')\n",
         "        return\n",
-        "    info(f\"Checking if the season {targetseason} of {targetshow} is downloaded\")\n",
-        "    showsearch = show_exists(targetshow)\n",
+        "    info(f\"Checking if the season {searchseason} of {foundshow} is downloaded\")\n",
+        "    showsearch = show_exists(foundshow)\n",
         "    targetpath = \"\"\n",
-        "    if showsearch:\n",
-        "        targetshow = showsearch['foundname']\n",
-        "        showpath = path_tvshow(targetshow)\n",
-        "        targetpath = path_season(targetshow, targetseason)\n",
+        "    result = {'type': 'TV season', \"foundname\": \"\", \"foundpath\": \"\", \"foundshow\": \"\", 'foundfile': \"\", \"founddir\": \"\"}\n",
+        "    if showsearch['foundpath']:\n",
+        "        foundshow = showsearch['foundname']\n",
+        "        result[\"foundshow\"] = foundshow\n",
+        "        showpath = path_tvshow(foundshow)\n",
+        "        targetpath = path_season(foundshow, searchseason)\n",
         "        if os.path.exists(targetpath) and not is_empty(targetpath):\n",
-        "            info(f\"Season {targetseason} of {targetshow} is downloaded\")\n",
-        "            return {'type': 'TV season', \"foundname\": targetseason, \"foundpath\": targetpath, \"foundshow\": targetshow, 'foundfile': '', \"founddir\": showpath}\n",
-        "    info(f\"Season {targetseason} of {targetshow} is not downloaded\")\n",
-        "    return False\n",
+        "            info(f\"Season {searchseason} of {foundshow} is downloaded\")\n",
+        "            result[\"foundname\"] = searchseason\n",
+        "            result[\"foundpath\"] = targetpath\n",
+        "            result[\"foundfile\"] = targetpath\n",
+        "            result[\"founddir\"] = showpath\n",
+        "        else:\n",
+        "            info(f\"Season {searchseason} of {foundshow} is not downloaded\")\n",
+        "    return result\n",
         "\n",
-        "def episode_exists(targetshow, season, searchepisode): \n",
+        "def episode_exists(foundshow, season, searchepisode): \n",
         "    info(f\"Checking if the episode: {searchepisode} is downloaded\")\n",
-        "    showsearch = show_exists(targetshow)\n",
+        "    showsearch = show_exists(foundshow)\n",
         "    targetepisode = \"\"\n",
         "    targetpath= \"\"\n",
-        "    if showsearch:\n",
-        "        targetshow = showsearch['foundname']\n",
-        "        seasonpath = path_season(targetshow, season)\n",
+        "    result = {'type': 'TV episode', \"foundname\": \"\", \"foundpath\": \"\", \"foundshow\": \"\", 'foundfile': \"\", \"founddir\": \"\"}\n",
+        "    if showsearch['foundpath']:\n",
+        "        foundshow = showsearch['foundname']\n",
+        "        result[\"foundshow\"] = foundshow\n",
+        "        seasonpath = path_season(foundshow, season)\n",
         "        if os.path.exists(seasonpath) and not is_empty(seasonpath):\n",
         "            check = eps_pt.search(searchepisode) #rerite search algorithm\n",
         "            eps = check.group() if check else searchepisode\n",
@@ -1799,11 +1812,16 @@
         "                splt = os.path.splitext(targetepisode)\n",
         "                if splt[1] == \".mp4\" or splt[1] == \".mkv\": \n",
         "                    if contains(splt[0], eps):\n",
-        "                        targetpath = path_episode(targetshow, season, targetepisode)\n",
+        "                        targetpath = path_episode(foundshow, season, targetepisode)\n",
         "                        info(f\"Episode: {searchepisode} is downloaded as {targetpath}\")\n",
-        "                        return {'type': 'TV episode', \"foundname\": targetepisode, \"foundpath\": targetpath, \"foundshow\": targetshow, 'foundfile': targetpath, \"founddir\": seasonpath}\n",
-        "    info(f\"Episode: {searchepisode} is not downloaded.\")\n",
-        "    return False\n",
+        "                        result[\"foundname\"] = targetepisode\n",
+        "                        result[\"foundpath\"] = targetpath\n",
+        "                        result[\"foundfile\"] = targetpath\n",
+        "                        result[\"founddir\"] = seasonpath\n",
+        "                        break\n",
+        "    if not result[\"foundpath\"]:\n",
+        "        info(f\"Episode: {searchepisode} is not downloaded.\")\n",
+        "    return result\n",
         "\n",
         "def check_download(type_, name):\n",
         "    if type_ == MOVIE:\n",
@@ -1928,12 +1946,12 @@
         "        searchresult = show_exists(newname)\n",
         "        savepath = config.tv_path\n",
         "        backuppathes = config.tvbackups\n",
-        "        attrs.show = newname\n",
+        "        attrs.show = newname if not searchresult['foundname'] else searchresult['foundname']\n",
         "    elif Type == SEASON:\n",
         "        newname = get_season(attrs.name)\n",
         "        show = name_show(attrs.name, attrs.quality)\n",
         "        searchresult = season_exists(show, newname) \n",
-        "        if searchresult:\n",
+        "        if searchresult['foundshow']:\n",
         "            show = searchresult['foundshow']           \n",
         "        savepath = path_tvshow(show)\n",
         "        backuppathes = get_season_backup_pathes(show)\n",
@@ -1944,7 +1962,7 @@
         "        show = name_show(attrs.name, attrs.quality)\n",
         "        season = get_season(attrs.name)\n",
         "        searchresult = episode_exists(show, season, newname)        \n",
-        "        if searchresult:\n",
+        "        if searchresult['foundshow']:\n",
         "            show = searchresult['foundshow']\n",
         "        savepath = path_season(show, season)\n",
         "        backuppathes = get_episode_backup_pathes(show, season)\n",
@@ -1954,7 +1972,7 @@
         "    else:\n",
         "        attrs.save_path = config.general_path\n",
         "        backuppathes = config.generalbackups\n",
-        "    if searchresult:\n",
+        "    if searchresult['foundpath']:\n",
         "        res.exists = True\n",
         "        res.typestr = searchresult['type']\n",
         "        res.foundname = searchresult['foundname']\n",
@@ -2504,7 +2522,7 @@
         "                if title_text in config.watched_movies_list:\n",
         "                    title.watched = True\n",
         "                    watched.append(title)\n",
-        "                if movie_exists(title_text):\n",
+        "                if movie_exists(title_text)[\"foundpath\"]:\n",
         "                    downloaded.append(title)\n",
         "                    title.downloaded= True\n",
         "                    if not imdbparams.filterdownloaded:\n",
@@ -3416,7 +3434,7 @@
         "            if season:\n",
         "                for filename in diritem[1]:\n",
         "                    lookup1 = episode_exists(attrs.show, season, filename)\n",
-        "                    if lookup1:\n",
+        "                    if lookup1['foundpath']:\n",
         "                        oldfilepath = lookup1['foundpath']\n",
         "                        oldfiletemppath = f\"{os.path.dirname(oldfilepath)}/{delstr}\"\n",
         "                        os.makedirs(oldfiletemppath, exist_ok=True)\n",
