--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -22,7 +22,7 @@
         "from ipywidgets import Output\n",
         "pytz.timezone('Turkey')\n",
         "    \n",
-        "# Platform in wich the app will run on, basic variables for envs\n",
+        "# Platform in wich the app will run on, basic variables for envs \n",
         "\n",
         "td_id = \"TD1\"\n",
         "td_email = \"default@mail.com\"\n",
@@ -1014,7 +1014,8 @@
         "\n",
         "## 1337x\n",
         "\n",
-        "X1337XPROXEY_BASE = 'https://1337x.unblockit.esq'\n",
+        "X1337XPROXEY_BASE = 'https://www.1377x.to'\n",
+        "X1337XPROXEY_BASE2 = 'https://1337x.unblockit.esq'\n",
         "X1337X_BASE = 'https://1337x.to'\n",
         "X1337X_TV = \"TV\"\n",
         "X1337X_MOVIES = \"Movies\"\n",
@@ -2738,9 +2739,8 @@
         "\n",
         "def getsitesort(sort, order, site):\n",
         "    if site == X1337X:\n",
-        "        if sort == SEEDERSSORT:\n",
-        "            sort1337x = X1337X_SEEDERS\n",
-        "        elif sort == TIMESORT:\n",
+        "        sort1337x = X1337X_SEEDERS\n",
+        "        if sort == TIMESORT:\n",
         "            if order == DESCORDER:\n",
         "                sort1337x = X1337X_TIME_DESC\n",
         "            else:\n",
@@ -2763,22 +2763,25 @@
         "        if category == GAMESCATEGORY_TD:\n",
         "            return X1337X_GAMES  \n",
         "    return ALLCATEGORIES_TD\n",
-        "        \n",
-        "def search1337x(search, sort= SEEDERSSORT, order= DESCORDER, category = \"\", page = 1, attrs = None, result: SearchResult= None):\n",
-        "    if page < 1: page = 1\n",
-        "    if not attrs:\n",
-        "        attrs = DownloadAttrs()\n",
-        "    if not result:    \n",
-        "        result = SearchResult(search= search, site= X1337X, category= ALLCATEGORIES_TD, attrs= attrs)\n",
-        "        appstate.searchresults.append(result)\n",
+        "\n",
+        "def build1337xUrl(search, sort= SEEDERSSORT, order= DESCORDER, category = \"\", page = 1):\n",
         "    l337xsort = getsitesort(sort, order, X1337X)\n",
         "    search_s = search.replace(\"'\", \" \").replace(\" \",\"%20\")\n",
         "    parameters = f\"/sort-category-search/{search_s}/{category}/{l337xsort}/{page}/\" if category else f\"/sort-search/{search_s}/{l337xsort}/{page}/\"\n",
-        "    url = X1337XPROXEY_BASE + parameters\n",
+        "    return X1337XPROXEY_BASE + parameters\n",
+        "\n",
+        "def search1337x(search, sort= SEEDERSSORT, order= DESCORDER, category = \"\", page = 1, attrs = None, result: SearchResult= None):\n",
+        "    if page < 1: page = 1\n",
+        "    url = build1337xUrl(search, sort, order, category, page)\n",
         "    info(f\"Scraping 1337x search for: {search} Page: {page}\\nURL: {url}.\")\n",
         "    download_state = \"downloaded\" if check_download(attrs.type_, search) else \"not downloaded\"\n",
         "    info(f\"{search} is {download_state}.\")\n",
         "    request = requests.get(url, headers= requests_header)\n",
+        "    if not attrs:\n",
+        "        attrs = DownloadAttrs()\n",
+        "    if not result:    \n",
+        "        result = SearchResult(search= search, site= X1337X, category= ALLCATEGORIES_TD, attrs= attrs, url= url)\n",
+        "        appstate.searchresults.append(result)    \n",
         "    if request.status_code == 200 :\n",
         "        soup = Soup(request.text, 'html.parser' )\n",
         "        pagination = soup.find(attrs={\"class\":\"pagination\"})\n",
@@ -2801,6 +2804,7 @@
         "        result.totalpages = totalpages\n",
         "        result.sort = sort\n",
         "        result.order = order\n",
+        "        result.currentpageurl = url\n",
         "        main_element = soup.find(\"tbody\")\n",
         "        if main_element is None:\n",
         "            warning(\"\\nResults table is null search.\\n\")\n",
@@ -5601,7 +5605,6 @@
         "    #if IS_ENV_COLAB:  output.clear() \n",
         "    display(container, Javascript(js))\n",
         "\n",
-        "#BUG attrs obj is reused in every add. reproduction: add mulitple download from the same search.\n",
         "\n",
         "# using Javascript is persisted in the output\n",
         "# when cell done executing with setup thread running in the background, output is cleared.\n",
