--- a/dd.ipynb
+++ b/dd.ipynb
@@ -10,7 +10,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form",
+    "id": "6mYSH1yDOwvw"
+  },
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
@@ -32,7 +35,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "cellView": "form",
+    "id": "ZxUTGFyDuBUz"
+  },
    "outputs": [],
    "source": [
     "#@title \n",
