--- a/dd.ipynb
+++ b/dd.ipynb
@@ -13,15 +13,15 @@
    "metadata": {
     "cellView": "form",
     "id": "6mYSH1yDOwvw"
-  },
+   },
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
     "#@markdown\n",
     "\n",
-    "import os, pytz\n",
+    "import os, pytz, time\n",
     "from google.colab import drive\n",
-    "from datetime import datetime, time\n",
+    "from datetime import datetime\n",
     "\n",
     "\n",
     "tz = pytz.timezone('Turkey')\n",
@@ -38,7 +38,7 @@
    "metadata": {
     "cellView": "form",
     "id": "ZxUTGFyDuBUz"
-  },
+   },
    "outputs": [],
    "source": [
     "#@title \n",
