--- a/dd.ipynb
+++ b/dd.ipynb
@@ -51,8 +51,8 @@
     "os.makedirs(Save_Dir, exist_ok=True)\n",
     "os.makedirs(tempsave, exist_ok=True)\n",
     "\n",
-    "!wget \"$Direct_URL\" \"$tempsave\"\n",
-    "!mv  \"$tempsave\"/* \"$Save_Dir\""
+    "!wget -P \"$tempsave\" \"$Direct_URL\"\n",
+    "!mv \"$tempsave\"/* \"$Save_Dir\""
    ]
   }
  ],
