--- a/dd.ipynb
+++ b/dd.ipynb
@@ -20,8 +20,10 @@
     "#@markdown\n",
     "\n",
     "import os, pytz, time\n",
+    "from bs4 import BeautifulSoup as Soup, element\n",
     "from google.colab import drive\n",
     "from datetime import datetime\n",
+    "\n",
     "\n",
     "\n",
     "tz = pytz.timezone('Turkey')\n",
@@ -53,6 +55,23 @@
     "\n",
     "!wget -P \"$tempsave\" \"$Direct_URL\"\n",
     "!mv \"$tempsave\"/* \"$Save_Dir\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "id": "ZxUTGFyDuBUz"
+   },
+   "outputs": [],
+   "source": [
+    "#@title \n",
+    "#@markdown CURL\n",
+    "\n",
+    "URL = \"\" #@param {type:\"string\"}\n",
+    "\n",
+    "!curl $URL"
    ]
   }
  ],
