--- a/dd.ipynb
+++ b/dd.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "Direct_URL = \"\" #@param {type:\"string\"}\n",
     "Save_Dir = \"\" #@param {type:\"string\"}\n",
-    "Name = \"playful busty lesbians\" #@param {type:\"string\"}\n",
+    "Name = \"\" #@param {type:\"string\"}\n",
     "\n",
     "if Direct_URL:\n",
     "    download(Direct_URL, save_dir= Save_Dir, name= Name)"
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "#@title { form-width: \"2%\" }\n",
-    "# #@markdown JUST CURL\n",
+    "#@markdown JUST CURL\n",
     "\n",
     "URL = \"\" #@param {type:\"string\"}\n",
     "\n",
